fixing terminal text size on mobile even more

--- a/app/assets/stylesheets/landing/landing.scss
+++ b/app/assets/stylesheets/landing/landing.scss
@@ -436,3 +436,11 @@
     }
   }
 }
+
+@media (max-width: 394px) {
+  .home-section {
+    .terminal-example {
+      font-size: 11px;
+    }
+  }
+}
